# seginternet

./: .gitattributes  .gitignore  CLAUDE.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
deploy/: 01-proxmox-create-lxc.sh  02-setup-lxc.sh  DEPLOY.md  add-ssh-key.sh  cloudflared-config.yml  cloudflared.service  post-receive  seginternet.service  update.sh
src/seginternet/: __init__.py  cli.py
src/seginternet/local/: ioc_database.py  machine_check.py  malware_scanner.py  network_monitor.py  process_analyzer.py  registry_scanner.py
src/seginternet/opsec/: __init__.py  checklist.py  dns_leak.py  ip_info.py
src/seginternet/reporter/: __init__.py  report.py
src/seginternet/scanner/: __init__.py  dns_check.py  http_headers.py  ports.py  ssl_check.py
tests/: test_dns_check.py  test_http_headers.py  test_ports.py  test_ssl_check.py
