[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seginternet"
version = "0.1.0"
description = "Ferramenta CLI de análise de segurança de internet"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "dnspython>=2.6",
    "cryptography>=42",
]

[project.scripts]
seginternet = "seginternet.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
